[package]
name = "rust_nuke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.17"
rayon = "1.5.3"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
solana-clap-utils = { version = "=1.10.19" }
solana-cli-config = { version = "=1.10.19" }
solana-client = { version = "=1.10.19" }
solana-core = { version = "=1.10.19" }
solana-faucet = { version = "=1.10.19" }
solana-genesis = { version = "=1.10.19" }
solana-gossip = { version = "=1.10.19" }
solana-logger = { version = "=1.10.19" }
solana-measure = { version = "=1.10.19" }
solana-metrics = { version = "=1.10.19" }
solana-net-utils = { version = "=1.10.19" }
solana-rpc = { version = "=1.10.19" }
solana-runtime = { version = "=1.10.19" }
solana-sdk = { version = "=1.10.19" }
solana-streamer = { version = "=1.10.19" }
solana-version = { version = "=1.10.19" }
thiserror = "1.0"
